--- a/notebooks/010_predict_score_each_bar_length.ipynb
+++ b/notebooks/010_predict_score_each_bar_length.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41425d74",
+   "id": "6c48ee07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "92915a7f",
+   "id": "e6e15a4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a3a4e60",
+   "id": "799825da",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "73e89f70",
+   "id": "f8ed52f2",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3ded4e99",
+   "id": "e476d84e",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "640b81f2",
+   "id": "0e9e82d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "79007fd6",
+   "id": "f805cdcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7ce0d0b0",
+   "id": "b9ec287e",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "51ec5181",
+   "id": "06c5a890",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3337a980",
+   "id": "8f4dba35",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71b01222",
+   "id": "e5e86da7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d682e3ba",
+   "id": "77eff1e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "007a0266",
+   "id": "a715eefa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8e8b2af4",
+   "id": "ad2b1672",
    "metadata": {
     "scrolled": true
    },
@@ -2487,7 +2487,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "eaa9d13c",
+   "id": "73bb25ea",
    "metadata": {
     "scrolled": true
    },
@@ -4549,7 +4549,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d8d91c20",
+   "id": "a9f47b07",
    "metadata": {},
    "outputs": [
     {
@@ -4575,7 +4575,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3b06300b",
+   "id": "d9d6ed03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4586,7 +4586,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4c477542",
+   "id": "59feee4b",
    "metadata": {},
    "outputs": [
     {
@@ -4756,7 +4756,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "356e6c92",
+   "id": "cfeef008",
    "metadata": {},
    "outputs": [
     {
@@ -5261,7 +5261,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e941a869",
+   "id": "3482d143",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5272,7 +5272,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "6c68359b",
+   "id": "9670b55a",
    "metadata": {},
    "outputs": [
     {
@@ -5320,7 +5320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5c1c8ec",
+   "id": "20177c67",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5328,7 +5328,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "f113bca6",
+   "id": "d5a867ec",
    "metadata": {},
    "outputs": [
     {
@@ -5349,7 +5349,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "226889f3",
+   "id": "293dc996",
    "metadata": {},
    "outputs": [
     {
@@ -5370,7 +5370,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "8cddbabc",
+   "id": "a3ffd914",
    "metadata": {},
    "outputs": [
     {
@@ -5392,7 +5392,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "1485f6d2",
+   "id": "d0328955",
    "metadata": {},
    "outputs": [
     {
@@ -5414,7 +5414,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "ae925163",
+   "id": "29479bc2",
    "metadata": {},
    "outputs": [
     {
@@ -5436,7 +5436,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "f9804249",
+   "id": "55b5f131",
    "metadata": {},
    "outputs": [
     {
@@ -5459,7 +5459,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "becdf1e9",
+   "id": "002bd709",
    "metadata": {},
    "outputs": [
     {
@@ -5480,7 +5480,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "b2512103",
+   "id": "ebb42300",
    "metadata": {},
    "outputs": [
     {
@@ -5510,7 +5510,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "8b1c5ca7",
+   "id": "07d27d19",
    "metadata": {},
    "outputs": [
     {
@@ -5538,7 +5538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6612721a",
+   "id": "540e62dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5546,7 +5546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e7d66c2",
+   "id": "c9b6d035",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5554,7 +5554,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "0550f715",
+   "id": "6ad5a32d",
    "metadata": {},
    "outputs": [
     {
@@ -5724,7 +5724,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "91173c8b",
+   "id": "ed6c75ac",
    "metadata": {},
    "outputs": [
     {
@@ -5742,7 +5742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f50ff25e",
+   "id": "a855f470",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -5750,7 +5750,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "05073f3a",
+   "id": "4989f331",
    "metadata": {},
    "outputs": [
     {
@@ -6255,12 +6255,12 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "9192ad5c",
+   "id": "eae150d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def dump_forest(reg):\n",
-    "    print(f\"RandomForest<{reg_long.n_estimators}, 32>\" \"{\")\n",
+    "    print(f\"RandomForest<{reg.n_estimators}, 32>\" \"{\")\n",
     "    for tree in reg.estimators_:\n",
     "        tree = tree.tree_\n",
     "        print(\"DecisionTree<32>{\")\n",
@@ -6277,7 +6277,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "6cd577de",
+   "id": "c5682512",
    "metadata": {},
    "outputs": [
     {
@@ -6456,7 +6456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6f9b4fe",
+   "id": "e50dc249",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6464,7 +6464,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "ef090793",
+   "id": "52fa01ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6474,7 +6474,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "f22a34ba",
+   "id": "b791f03f",
    "metadata": {},
    "outputs": [
     {
@@ -6495,7 +6495,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "5faf00e7",
+   "id": "da4b222b",
    "metadata": {},
    "outputs": [
     {
@@ -6526,7 +6526,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "cc44f04b",
+   "id": "ee7cb646",
    "metadata": {},
    "outputs": [
     {
@@ -6547,7 +6547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "036b9ecb",
+   "id": "b4fe22c4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6555,7 +6555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e77e8f",
+   "id": "4ff3691e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6563,7 +6563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "709421c0",
+   "id": "3ec9e7d4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6571,7 +6571,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "99cb29b8",
+   "id": "01706ce3",
    "metadata": {},
    "outputs": [
     {
@@ -6750,7 +6750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "274d1d58",
+   "id": "2ecf9a7e",
    "metadata": {},
    "outputs": [],
    "source": []
